# Quantitative-Actuarial

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  tests.yml
app/: __init__.py  domain.py  main.py  market_services.py  optima_charts.py  optima_services.py  utils.py
app/pages/: 10_Forwards.py  11_Derivados_Vanilla.py  12_Derivados_Exoticos.py  13_Derivados_Credito_CDS.py  14_Derivados_Credito_CDO.py  15_Formulario.py  16_Optima_Portafolios.py  17_VQD.py  18_VQD_BSM.py  19_VQD_CRR.py  1_Tasas.py  20_VQD_Heston.py  21_VQD_Merton.py  22_VQD_Complementos.py  23_VQD_Comparativa.py  24_VQD_LiveData.py  25_VQD_SABR.py  26_VQD_VG_NIG.py  27_VQD_Bachelier_MC.py  2_Valor_Dinero.py  3_Rentas.py  4_Amortizacion.py  5_Bonos.py  6_Acciones.py  7_Portafolios.py  8_Valuacion_Corporativa.py  9_Riesgo.py
docs/: conf.py  development.rst  index.rst  usage.rst
docs/api/: advanced_derivatives.rst  compatibility.rst  creditrisk.rst  derivados_avanzados.rst  derivatives.rst  financial_math.rst  index.rst  portafolioopt.rst  portfolioopt.rst  public.rst
docs_build/html/: .buildinfo  development.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs_build/html/.doctrees/: development.doctree  environment.pickle  index.doctree  usage.doctree
docs_build/html/_modules/: index.html
docs_build/html/_sources/: development.rst.txt  index.rst.txt
docs_build/html/api/: compatibility.html  creditrisk.html  derivatives.html  financial_math.html  index.html  public.html
paper/: paper.md
src/quantitativeactuarial/: __init__.py  credit.py  credito.py  derivados.py  rates.py  tasas.py
src/quantitativeactuarial/advanced_derivatives/: engine.py  monte_carlo.py  types.py
src/quantitativeactuarial/creditrisk/: __init__.py  cdo.py  cds.py  copula.py  data.py  distribution.py  risk.py  transitions.py  types.py  valuation.py
src/quantitativeactuarial/derivados_avanzados/: __init__.py  comparison.py  engine.py  validation.py
src/quantitativeactuarial/derivatives/: __init__.py  exotics.py  forwards.py  strategies.py  trees.py  vanilla.py
src/quantitativeactuarial/financial_math/: __init__.py  annuities.py  bonds.py  cashflows.py  corporate.py  equity.py  loans.py  portfolio.py  rates.py  (+2 more)
tests/: __init__.py  cases.py  test_forwards_compounding.py  test_results.py
tests/fixtures/: results.json
(+65 files in other folders)
