[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantitativeactuarial"
version = "0.1.0"
description = "Pure actuarial and quantitative finance routines used by the Quantitative Actuarial Streamlit app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
app = [
    "streamlit",
    "plotly",
    "yfinance",
]
dev = [
    "pytest",
    "ruff",
]
docs = [
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autobuild",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "app", "tests"]
exclude = [
    "docs/_build",
    "docs_build",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
